animation mobile fix

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5743,6 +5743,24 @@ h1, h2, h3, h4, h5 {
 
   100% {
     transform: translate(0, -1100px); } }
+@-webkit-keyframes rise-asset-mobile {
+  0% {
+    -webkit-transform: translate(0, 800px); }
+
+  100% {
+    -webkit-transform: translate(0, -800px); } }
+@-moz-keyframes rise-asset-mobile {
+  0% {
+    -moz-transform: translate(0, 800px); }
+
+  100% {
+    -moz-transform: translate(0, -800px); } }
+@keyframes rise-asset-mobile {
+  0% {
+    transform: translate(0, 800px); }
+
+  100% {
+    transform: translate(0, -800px); } }
 /* End Header ------------------------------------------------------------ */
 /* 
  * ---------------------------------------------------------------------------
